# pr6

./: CMakeLists.txt  README.md
src/: task1.c  task2.c
